Fixed the filterInput where the box-shadow was visible from the corner radius of input.

--- a/main.css
+++ b/main.css
@@ -345,9 +345,9 @@
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 5px;
-  border-radius: 5px;
   border: none;
-  box-shadow: black 0px 0px 1px 0.3px;
+  box-shadow: black 0px 0px 0px 0.6px;
+  border-radius: 5px;
 }
 .filterSection .filterContainer .containerRight .tagsGrupTop {
   margin-bottom: 5px;
